# Planning_performance

./: .replit  TODO.md  pyproject.toml  replit.md
frontend/: .gitignore  bunfig.toml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
frontend/scripts/: convert-ts-to-js.mjs
frontend/src/: App.tsx  styles.css
frontend/src/components/: FileUpload.tsx  PageHeader.tsx  PagePlaceholder.tsx  StatusBadge.tsx
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/layout/: DashboardLayout.d.ts  DashboardLayout.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/components/pc/: PCFormRow.tsx  PCTable.tsx
frontend/src/components/ui/: button.tsx  dropdown-menu.tsx
frontend/src/context/: AuthContext.d.ts  AuthContext.tsx
frontend/src/hooks/: useProjectsApi.ts  useUserManagementApi.ts
frontend/src/pages/: Logout.tsx
frontend/src/pages/auth/: LoginPC.tsx  LoginPortal.tsx  LoginProjects.tsx  LoginStrategic.tsx
frontend/src/pages/dashboard/: Overview.tsx
frontend/src/pages/notifications/: Notifications.tsx
frontend/src/pages/partners/: Partners.tsx
frontend/src/pages/performance-contracts/: CaptureAchievement.tsx  CoreMandateIndicators.tsx  ExplanatoryAffirmative.tsx  ExplanatoryCore.tsx  ExplanatoryCross.tsx  ExplanatoryFinancial.tsx  ExplanatoryPresidential.tsx  ExplanatoryService.tsx  MDADetails.tsx  MDASignatories.tsx  MatrixAffirmative.tsx  MatrixCore.tsx  MatrixCross.tsx  MatrixFinancial.tsx  PCReports.tsx  (+23 more)
frontend/src/utils/: apiClient.ts  mockData.ts  modules.ts  notificationsStore.ts  projectsModuleStore.ts  types.ts
(+112 files in other folders)
