[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.0",
    "django==5.2.4",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "pillow>=12.2.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
